<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="view"
            type="com.mhuman.movieplot.ui.setting.SettingFragment" />

        <variable
            name="vm"
            type="com.mhuman.movieplot.ui.setting.SettingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.setting.SettingFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidline_1"
            style="@style/CustomGuideLine"
            app:layout_constraintGuide_percent="0.33" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidline_2"
            style="@style/CustomGuideLine"
            app:layout_constraintGuide_percent="0.66" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidline_3"
            style="@style/CustomGuideLine"
            app:layout_constraintGuide_percent="0.99" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_theme_setting"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toTopOf="@id/guidline_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ui.setting.SettingFragment">

                <TextView
                    android:id="@+id/text_view_theme_title"
                    style="@style/CustomTextViewUsedInSettingFragment"
                    android:text="@string/setting_tab_first_title"
                    android:textColor="?attr/textColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/floating_button_light_theme_setting"
                    style="@style/CustomExtendedFloatingActionUsedInCategoryFragment"
                    android:backgroundTint="@color/md_white_1000"
                    android:onClick='@{() -> view.setThemeInfo(false)}'
                    android:text="@string/light_theme"
                    android:textColor="@color/md_black_1000"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/floating_button_dark_theme_setting"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_theme_title" />

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/floating_button_dark_theme_setting"
                    style="@style/CustomExtendedFloatingActionUsedInCategoryFragment"
                    android:backgroundTint="@color/md_black_1000"
                    android:onClick='@{() -> view.setThemeInfo(true)}'
                    android:text="@string/dark_theme"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/floating_button_light_theme_setting"
                    app:layout_constraintTop_toBottomOf="@id/text_view_theme_title" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_opinion_setting"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toTopOf="@id/guidline_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guidline_1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ui.setting.SettingFragment">

                <TextView
                    android:id="@+id/text_view_opinion_title"
                    style="@style/CustomTextViewUsedInSettingFragment"
                    android:text="@string/setting_tab_second_title"
                    android:textColor="?attr/textColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/floating_button_send_opinion"
                    style="@style/CustomExtendedFloatingActionUsedInCategoryFragment"
                    android:layout_width="match_parent"
                    android:layout_margin="16dp"
                    android:text="@string/send_opinion"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_opinion_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_version_setting"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toTopOf="@id/guidline_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guidline_2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ui.setting.SettingFragment">

                <TextView
                    android:id="@+id/text_view_version_title"
                    style="@style/CustomTextViewUsedInSettingFragment"
                    android:text="@string/setting_tab_third_title"
                    android:textColor="?attr/textColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/floating_button_check_version"
                    style="@style/CustomExtendedFloatingActionUsedInCategoryFragment"
                    android:layout_width="match_parent"
                    android:layout_margin="16dp"
                    android:text="@string/send_opinion"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_version_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>