<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="view"
            type="com.mhuman.movieplot.ui.detail.DetailActivity" />

        <variable
            name="vm"
            type="com.mhuman.movieplot.ui.detail.DetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundColor"
        tools:context=".ui.detail.DetailActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidline_1"
            style="@style/CustomGuideLine"
            app:layout_constraintGuide_percent="0.12" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidline_2"
            style="@style/CustomGuideLine"
            app:layout_constraintGuide_percent="0.43" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidline_3"
            style="@style/CustomGuideLine"
            app:layout_constraintGuide_percent="0.6" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidline_4"
            style="@style/CustomGuideLine"
            app:layout_constraintGuide_percent="0.98" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/viewColor"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toTopOf="@id/guidline_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:visibility="@{!safeUnbox(vm.liveIsLoading)}">

            <TextView
                android:id="@+id/text_view_movie_title_content"
                style="@style/CustomTextViewUsedInSettingFragment"
                android:layout_width="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="?attr/textColor"
                tools:text="영화 제목" />
        </androidx.cardview.widget.CardView>


        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/you_tube_player_preview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingRight="8dp"
            app:autoPlay="false"
            app:layout_constraintBottom_toTopOf="@id/guidline_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guidline_1"
            app:showFullScreenButton="false"
            app:visibility="@{!safeUnbox(vm.liveIsLoading)}" />


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_share"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?attr/viewColor"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick='@{() -> view.onShowKaKaoLink()}'
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toTopOf="@id/guidline_3"
            app:layout_constraintEnd_toStartOf="@id/card_view_favorite"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guidline_2"
            app:layout_constraintVertical_weight="1"
            app:visibility="@{!safeUnbox(vm.liveIsLoading)}">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/share"
                android:textColor="?attr/textColor"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_favorite"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?attr/viewColor"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toTopOf="@id/guidline_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/card_view_share"
            app:layout_constraintTop_toBottomOf="@id/guidline_2"
            app:layout_constraintVertical_weight="1"
            app:visibility="@{!safeUnbox(vm.liveIsLoading)}">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/favorite"
                android:textColor="?attr/textColor"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/viewColor"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="@+id/guidline_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guidline_3"
            app:visibility="@{!safeUnbox(vm.liveIsLoading)}">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_view_theme_title"
                    style="@style/CustomTextViewUsedInSettingFragment"
                    android:text="@string/detail_tab_first_title"
                    android:textColor="?attr/textColor"
                    app:layout_constraintBottom_toTopOf="@id/recycler_view_cast_list"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/image_view_empty_cast_list"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:scaleType="center"
                    android:src="@drawable/ic_error_red_a700_24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_theme_title"
                    app:visibility="@{safeUnbox(vm.liveEventForCheckCastListSize)}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:gravity="center|top"
                    android:text="@string/msg_failed_request_cast_list_data"
                    android:textColor="?attr/textColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/image_view_empty_cast_list"
                    app:visibility="@{safeUnbox(vm.liveEventForCheckCastListSize)}" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_cast_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_theme_title"
                    bind:item="@{vm.liveCastList}"
                    tools:itemCount="10"
                    tools:listitem="@layout/item_cast_list" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/ProgressBarTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:visibility="@{safeUnbox(vm.liveIsLoading)}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>